--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
    <div class="video-container">
      <video id="myVideo" controls controlsList="nodownload">
-       <source src="prototype_video.mov" type="video/mp4">
+       <source src="landingpage.mov" type="video/mp4">
        Your browser does not support the video tag.
      </video>
      <div class="controls">
